<resources>
    <string name="app_name"> Material Design</string>
    <string name="next">NEXT</string>
    <string name="lorem_ipsum">Picture</string>
    <string name="error_loading">Error</string>
    <string name="loading">Loading</string>
    <string name="search_wiki">Search</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="to_days_ago">To days ago</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="archive">Archive</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="theme_brown">Theme Brown</string>
    <string name="theme_green">Theme Green</string>
    <string name="theme_default">Default</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="system">Solar system</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="photo" translatable="false">Photo</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="constraint_layout" translatable="false">Constraint</string>
    <string name="coordinator_layout" translatable="false">Coordinator</string>
    <string name="motion_layout" translatable="false">Motion</string>
    <string name="button_one" translatable="false">1</string>
    <string name="button_two" translatable="false">2</string>
    <string name="button_third" translatable="false">3</string>
    <string name="button_four" translatable="false">4</string>
    <string name="button_five" translatable="false">5</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
        "Bold, graphic, intentional.\n\n"
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"
        "Motion provides meaning.\n\n"
        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
        "3D world.\n\n"
        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"
        "Light and shadow.\n\n"
        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="fab" translatable="false">FAB</string>
    <string name="animation" translatable="false">Animation</string>
    <string name="click" translatable="false">Click</string>
    <string name="tap_on_me" translatable="false">TAP ON ME</string>
    <string name="path" translatable="false">Path</string>
    <string name="shuffle" translatable="false">Shuffle</string>
    <string name="text_option" translatable="false">option one</string>
    <string name="text_option_two" translatable="false">option two</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="statelistanimator_example" translatable="false">StateListAnimator Example</string>
    <string name="other_text" translatable="false">Дополнительный текст</string>
    <string name="header" translatable="false">Заголовок</string>
    <string name="description_text" translatable="false">Дополнительный текст</string>
    <string name="large_text_mars">Марс — четвёртая по удалённости от Солнца
        и седьмая по размерам планета Солнечной системы. Названа в честь Марса
        — древнеримского бога войны, соответствующего древнегреческому Аресу.
        Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности
        придаваемого ей минералом маггемитом (оксидом железа).</string>
    <string name="back" translatable="false">Back</string>

    <string name="cicero" translatable="false">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem
accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo
inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim
ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia
consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro
quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit,
sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam
aliquam quaerat voluptatem.</string>
    <string name="photo_of_the_day_stub" translatable="false">Text</string>


</resources>



