<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/action_gallery"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_insert_photo_24"
        android:title="@string/photo" />

    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favourite_menu"
        android:title="@string/favorite" />
    <item
        android:id="@+id/action_animation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_animation_24"
        android:title="@string/animation"/>

    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/setting" />

</menu>