<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/bnm"
        android:checkableBehavior="none"
        android:enabled="true"
        android:menuCategory="container"
        android:visible="true">

        <item
            android:id="@+id/action_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/archive"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_send"
            android:icon="@drawable/ic_send"
            android:title="@string/send"
            app:showAsAction="ifRoom" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_send_one"
            android:icon="@drawable/ic_send"
            android:title="@string/send"
            app:showAsAction="ifRoom" />

    </group>
</menu>