<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.layouts.ConstraintFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnOne,btnTwo,btnFour,btnFive" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_one"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalOne"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalOne"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalOne"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="160dp"
        android:text="@string/button_two"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalOne"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalThree"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalThree"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_third"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalTwo"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalTwo"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalTwo"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalTwo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_four"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalThree"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalOne"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalOne"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalThree" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_five"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalThree"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalThree"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalThree"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalThree" />

</androidx.constraintlayout.widget.ConstraintLayout>